# move_waffle

control/: CMakeLists.txt  package.xml
control/msg/: LoStr.msg
control/src/: control.py
control_2022/: CMakeLists.txt  package.xml
control_2022/src/: aruco.py  control.py  control_2022.py  control_pubmode.py  dwa.py  manipulator.py  res.py
control_2022/srv/: contol_2022.srv
test/: CMakeLists.txt  package.xml
test/src/: pub_a.py  pub_d.py  pub_m.py  sub.py
